PUT endpoint functional
- DecimalMin gone